syntax = "proto3";

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";

message PushFrameToFlowRequest {
  message Config {
    OpFlow flow = 1;
    google.protobuf.BoolValue config_ack = 2;
    google.protobuf.BoolValue push_ack = 3;
  }
  message Ping {
  }

  google.protobuf.StringValue id = 1;
  oneof request {
    Config config = 2;
    Ping ping = 3;
    OpFrame frame = 4;
  }
}

message PushFrameToFlowResponse {
  message Config {
    string session = 1;
  }
  message Ack {
  }
  message Pong {
  }

  string id = 1;
  oneof response {
    Config config = 2;
    Pong pong = 3;
    Ack ack = 4;
  }
}

message OpFlow {
  google.protobuf.StringValue id = 1;
  google.protobuf.StringValue device_id = 2;
  google.protobuf.StringValue name = 3;
  google.protobuf.StringValue alias = 4;
}

message Flow {
  string id = 1;
  string device_id = 2;
  string name = 3;
  string alias = 4;
}

message OpFrame {
  google.protobuf.Timestamp ts = 1;
  google.protobuf.Struct data = 2;
}

message Frame {
  google.protobuf.Timestamp ts = 1;
  google.protobuf.Struct data = 2;
}
